# betfair-rs

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  UPGRADE.md  config.example.toml  readme.md
.claude/: settings.local.json
.github/workflows/: release.yml  unit_tests.yml
examples/: account.rs  betfair.rs  cli.rs  competitions_by_country.rs  competitions_by_sport.rs  dashboard.rs  dto_advanced_example.rs  filter_demo.rs  interactive_login_test.rs  list_competitions.rs  list_events.rs  list_sports.rs  ordering.rs  public_data.rs  reconcile.rs  streaming.rs  streaming_order.rs  streaming_orderbook.rs  streaming_orders.rs  test_streaming.rs  unified_api_example.rs
src/: account.rs  api_client.rs  betfair.rs  config.rs  connection_state.rs  dto.rs.backup  lib.rs  main.rs  model.rs  models.rs  msg_model.rs  msg_models.rs  order.rs  order_cache.rs  orderbook.rs  public_data.rs  rate_limiter.rs  retry.rs  streamer.rs  streaming_client.rs  unified_client.rs
src/dto/: account.rs  common.rs  config.rs  decimal_serde.rs  market.rs  misc.rs  mod.rs  order.rs  rpc.rs  streaming.rs
test/: test_orderbook.rs
tests/: api_client_tests.rs  cancel_response_test.rs  config_tests.rs  connection_state_tests.rs  dto_tests.rs  msg_model_tests.rs  order_tests.rs  orderbook_tests.rs  place_order_response_test.rs  production_response_test.rs  sample_response_tests.rs  streaming_client_tests.rs  test_place_order_parse.rs  unified_client_tests.rs
tools/redis-streamer/: Cargo.toml  README.md
tools/redis-streamer/src/: main.rs
