[package]
name = "betfair-rs"
version = "0.1.0"
edition = "2021"
description = "Betfair API client for Rust"
license = "MIT"
repository = "https://github.com/t2o2/betfair-rs"
keywords = ["betfair", "betting", "trading"]

[[bin]]
name = "betfair"
path = "src/bin/betfair.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.9", features = ["rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
pkcs8 = { version = "0.10.2", features = ["pkcs5"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
webpki = "0.22"
tokio-native-tls = "0.3"
tracing = "0.1"
toml = "0.8"
rand = "0.9"
rustls = "0.23" 
rustls-pemfile = "2.2"
pem = "3.0"
serde_json = "1.0"
anyhow = "1.0"
dotenv = "0.15"
chrono = "0.4"
clap = { version = "4.5.44", features = ["derive"] }
ratatui = "0.28"
crossterm = "0.28"
