[package]
name = "redis-streamer"
version = "0.1.0"
edition = "2021"
authors = ["Chuan Bai"]
description = "Redis-based market streaming tool for betfair-rs"

[[bin]]
name = "redis-streamer"
path = "src/main.rs"

[dependencies]
# Core betfair library
betfair-rs = { path = "../.." }

# Redis functionality
redis = "0.23"

# Async runtime and utilities
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# CLI and formatting
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

# Collections
indexmap = "2.0"

# Signal handling for graceful shutdown
tokio-util = { version = "0.7", features = ["rt"] }
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }